@@ -127,16 +127,6 @@ class Smarty_CMS extends Smarty {
 			{
 				$stylesheet = '';
 
-				#Perform the content stylesheet callback
-				foreach($gCms->modules as $key=>$value)
-				{
-					if (isset($gCms->modules[$key]['content_stylesheet_function']) &&
-						$gCms->modules[$key]['Installed'] == true &&
-						$gCms->modules[$key]['Active'] == true)
-					{
-						call_user_func_array($gCms->modules[$key]['content_stylesheet_function'], array(&$gCms, &$stylesheet));
-					}
-				}
 
 				$stylesheet .='<link rel="stylesheet" type="text/css" href="stylesheet.php?templateid='.$template_id.'" />'; 
 
